# quantevolve

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TECHNICAL_INDICATORS_GUIDE.md  pyproject.toml  quantevolve-run.py  setup.py
.github/workflows/: python-lint.yml  python-test.yml
configs/: quantevolve_config.yaml
quantevolve/: README.md  __init__.py  cli.py  config.py  controller.py  database.py  evaluator.py
quantevolve/data/: market_data_collector.py
quantevolve/evaluation/: enhanced_evaluator.py  quant_evaluator.py
quantevolve/llm/: __init__.py  ensemble.py  gemini.py
quantevolve/prompt/: __init__.py  sampler.py  templates.py
quantevolve/strategy/: enhanced_strategy_generator.py  initial_strategy.py
quantevolve/utils/: __init__.py  async_utils.py  code_utils.py  indicators.py  talib_indicators_registry.py
tests/: test_basic.py  test_checkpoint_resume.py
